Change font sze of score board to stop it seeming squashed against eacj other on a smaller screen sizes

--- a/assets/style.css
+++ b/assets/style.css
@@ -128,7 +128,8 @@ footer {
         font-size: 130%;
     }
     .score-board {
-        padding: 3% 2%;
+        padding: 4% 2%;
+        font-size: 175%;
     }
     .action {
         font-size: 100%;
